Gutter bottom issue fix on overflow

--- a/src/components/blockexplorer/style.less
+++ b/src/components/blockexplorer/style.less
@@ -26,4 +26,6 @@
 .transactionlogPanel {
     height: 100%;
     overflow-y: auto;
+    padding-bottom: 110px;
+;
 }
